# linear_algebra

./: CMakeLists.txt  main.cpp
include/: common_matrix_vector_operations.inl  linear_algebra.hpp
include/console_renderer/: console_renderer_common.hpp
include/console_renderer/model/: model.hpp
include/console_renderer/renderer/: renderer.hpp
include/console_renderer/surface/: surface.hpp
include/geometry/: geometry_common.cpp  geometry_common.hpp
include/geometry/generalized_vector_product/: generalized_vector_product.hpp  generalized_vector_product.inl
include/geometry/intersections/: intersections.hpp  intersections.inl
include/geometry/primitives/: simplex.hpp  simplex.inl  space.hpp  space.inl  sphere.hpp  sphere.inl
include/geometry/projections/: projections.hpp  projections.inl
include/geometry2D/: geometry2D.hpp  geometry2D_common.hpp  geometry2D_io.hpp
include/geometry2D/intersections/: intersections.hpp  intersections.inl
include/geometry2D/primitives/: line.hpp  line.inl  line_segment_common.inl  rect.hpp  rect.inl  segment.hpp  segment.inl  triangle.hpp  triangle.inl
include/geometry2D/projections/: projections.hpp  projections.inl
include/linear_algebra/: common_matrix_vector_operations.inl  linear_algebra.hpp  linear_algebra_common.hpp  linear_algebra_common_functions.hpp  linear_algebra_type_traits.hpp
include/linear_algebra/equation_system/: equation_system.hpp
include/linear_algebra/matrix/: matrix.hpp  matrix.inl
include/linear_algebra/vector/: vector.hpp  vector.inl
include/matrix/: matrix.hpp
include/vector/: vector.hpp
